# pxr-usd-unity-build

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  unity-off.prof  unity-on.prof  usd-clang.patch  usd-disambiguate-symbols.patch  usd-inline-namespaces.patch  usd-misc.patch
src/: Helpers.cpp  Helpers.h  Locations.cpp  Locations.h  Replacements.cpp  Replacements.h
src/disambiguate-symbols/: DisambiguateSymbols.cpp  DisambiguateSymbols.h
src/disambiguate-symbols/tool/: DisambiguateSymbols.cpp
src/inline-namespaces/: InlineNamespaces.cpp  InlineNamespaces.h
src/inline-namespaces/tool/: InlineNamespaces.cpp
tests/inline-namespaces/1/: expected.cpp  original.cpp
tests/inline-namespaces/10/: expected.cpp  original.cpp
tests/inline-namespaces/11/: expected.cpp  original.cpp
tests/inline-namespaces/12/: expected.cpp  original.cpp
tests/inline-namespaces/13/: expected.cpp  original.cpp
tests/inline-namespaces/14/: expected.cpp  original.cpp
tests/inline-namespaces/15/: expected.cpp  original.cpp
tests/inline-namespaces/16/: expected.cpp  original.cpp
tests/inline-namespaces/2/: expected.cpp  original.cpp
tests/inline-namespaces/3/: expected.cpp  original.cpp
tests/inline-namespaces/4/: expected.cpp  original.cpp
tests/inline-namespaces/5/: expected.cpp  original.cpp
tests/inline-namespaces/6/: expected.cpp  original.cpp
tests/inline-namespaces/7/: original.cpp
tests/inline-namespaces/8/: expected.cpp  original.cpp
tests/inline-namespaces/9/: expected.cpp  original.cpp
tests/inline-namespaces/bug-1/: expected.cpp  original.cpp
tools/: fix.py  test.py  update-compile-commands.py
